config public mthods